leptos_macro/tests/ui/server.stderr
error: positional argument follows keyword argument
 --> tests/ui/server.rs:3:32
  |
3 | #[server(endpoint = "my_path", FooBar)]
  |                                ^^^^^^

error: keyword argument repeated: `endpoint`
 --> tests/ui/server.rs:8:30
  |
8 | #[server(endpoint = "first", endpoint = "second")]
  |                              ^^^^^^^^

error: expected string literal
  --> tests/ui/server.rs:13:15
   |
13 | #[server(Foo, Bar)]
   |               ^^^

error: expected string literal
  --> tests/ui/server.rs:17:15
   |
17 | #[server(Foo, Bar, bazz)]
   |               ^^^

error: expected identifier
  --> tests/ui/server.rs:22:10
   |
22 | #[server("Foo")]
   |          ^^^^^

error: expected `,`
  --> tests/ui/server.rs:27:14
   |
27 | #[server(Foo Bar)]
   |              ^^^

error: unexpected extra argument
  --> tests/ui/server.rs:32:49
   |
32 | #[server(FooBar, "/foo/bar", "Cbor", "my_path", "extra")]
   |                                                 ^^^^^^^

error: Encoding not found.
  --> tests/ui/server.rs:37:21
   |
37 | #[server(encoding = "wrong")]
   |                     ^^^^^^^
